<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tool.dialog.PasswordInputDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="title"
            android:textColor="@color/theme_green"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_id_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/splash_column_title_id"
                android:textColorHint="@color/theme_green"
                android:theme="@style/EditColumnDefault"
                app:errorEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingTop="20dp"
                    android:text="entry.123456"
                    android:textColor="@color/theme_blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/splash_column_title_name"
                android:textColorHint="@color/theme_green"
                android:theme="@style/EditColumnDefault"
                app:errorEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingTop="20dp"
                    android:text="entry.123456"
                    android:textColor="@color/theme_blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/splash_column_title_password"
                android:textColorHint="@color/theme_green"
                android:theme="@style/EditColumnDefault"
                app:errorEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingTop="20dp"
                    android:text="entry.123456"
                    android:textColor="@color/theme_blue" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_scan_to_get"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_check">

            <TextView
                android:id="@+id/btn_scan_to_get"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/drawable_ripple_key_edit"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_baseline_qr_code_scanner_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_lift"
            style="@style/secondary_button_style"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/dialog_cancel"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/light_green"
            app:cornerRadius="@dimen/dialog_button_corner"
            app:layout_constraintDimensionRatio="2.7"
            app:layout_constraintEnd_toStartOf="@+id/btn_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_scan_to_get"
            app:layout_constraintVertical_bias="0.63157"
            app:layout_constraintWidth_percent="0.43733" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_right"
            style="@style/main_button_style"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="15dp"
            android:text="@string/dialog_ok"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/dialog_button_corner"
            app:layout_constraintDimensionRatio="2.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_lift"
            app:layout_constraintTop_toBottomOf="@+id/cl_scan_to_get"
            app:layout_constraintWidth_percent="0.43733" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>