<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="project.main.activity.RecordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--送出時間、掃到什麼存什麼、送出API的網址、送出時的設定檔都要存下來，可用掃到的QRcode重送(用當前設定檔去重送)。-->
        <TextView
            android:id="@+id/tv_record_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/record_time"
            android:textColor="@color/theme_blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/vv_record_1"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vv_record_1"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@color/light_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/record_item_divider_ratio_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_record_scan_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/record_scan_name"
            android:textColor="@color/theme_blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/vv_record_2"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/vv_record_1"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vv_record_2"
            android:layout_width="2dp"

            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@color/light_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/record_item_divider_ratio_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_record_send_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/record_send_content"
            android:textColor="@color/theme_blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/vv_record_3"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/vv_record_2"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/vv_record_3"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@color/light_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/record_item_divider_ratio_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_record_send_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/record_send_setting"
            android:textColor="@color/theme_blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/vv_record_4"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/vv_record_3"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vv_record_4"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@color/light_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/record_item_divider_ratio_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/iv_record_resend"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/drawable_ripple_resend"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_double_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vv_record_4"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>