<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="project.main.tab.SettingContentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_setting_column_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/setting_item_margin_start_end"
            android:layout_marginTop="@dimen/setting_item_margin_top_bottom"
            android:layout_marginBottom="@dimen/setting_item_margin_top_bottom"
            android:text="@string/setting_adapter_column_title"
            android:textColor="@color/theme_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_setting_column_key"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/setting_item_margin_start_end"
            android:layout_marginTop="@dimen/setting_item_margin_top_bottom"
            android:layout_marginEnd="@dimen/setting_item_margin_start_end"
            android:layout_marginBottom="@dimen/setting_item_margin_top_bottom"
            android:text="@string/setting_adapter_column_key"
            android:textColor="@color/theme_blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/vv_setting_name_title_divider"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_setting_column_name" />

        <View
            android:id="@+id/vv_setting_name_title_divider"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@color/light_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/setting_item_center_divider_ratio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_setting_column_name" />

        <TextView
            android:id="@+id/tv_setting_column_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/setting_item_margin_start_end"
            android:layout_marginEnd="@dimen/setting_item_margin_start_end"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/setting_adapter_column_value"
            android:textColor="@color/theme_blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_setting_name_edit"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/vv_setting_name_title_divider"
            app:layout_constraintTop_toBottomOf="@+id/tv_setting_column_name" />

        <ImageView
            android:id="@+id/iv_setting_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/setting_item_margin_start_end"
            android:contentDescription="@null"
            android:src="@drawable/ic_baseline_mode_edit_outline"
            app:layout_constraintBottom_toBottomOf="@+id/tv_setting_column_value"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_setting_column_value" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>